remove lombok in identity service